# Holy-Scribe

./: CMakeLists.txt  README.md
Holy Scribe/: CMakeLists.txt  Holy Scribe.cpp  Holy Scribe.h
